--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,11 @@
 {
-	"extends": "@sapphire"
+	"extends": "@sapphire",
+	"rules": {
+		"react/react-in-jsx-scope": "off",
+		"prettier/prettier": 
+		[ "error",
+		  {
+			"endOfLine": "auto"}
+		]
+	
 }
