--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"@decorators/di": "^2.0.0",
 		"@decorators/express": "^2.9.1",
 		"@mikro-orm/core": "^5.6.11",
+		"@mikro-orm/migrations": "^5.6.11",
 		"@mikro-orm/mysql": "^5.6.11",
 		"@mikro-orm/reflection": "^5.5.0",
 		"cors": "^2.8.5",
@@ -41,14 +42,13 @@
 		"@commitlint/cli": "^17.1.2",
 		"@commitlint/config-conventional": "^17.1.0",
 		"@mikro-orm/cli": "^5.5.0",
-		"@mikro-orm/migrations": "^5.5.0",
 		"@sapphire/eslint-config": "^4.3.8",
 		"@sapphire/prettier-config": "^1.4.4",
 		"@sapphire/ts-config": "^3.3.4",
 		"@types/cors": "^2",
 		"@types/express": "^4",
 		"@types/jest": "^29.2.0",
-		"@types/node": "^17.0.31",
+		"@types/node": "^18.14.1",
 		"@typescript-eslint/eslint-plugin": "^5.40.1",
 		"@typescript-eslint/parser": "^5.40.1",
 		"cz-conventional-changelog": "^3.3.0",
@@ -103,6 +103,14 @@
 	"resolutions": {
 		"ansi-regex": "^5.0.1",
 		"minimist": "^1.2.7"
+	},
+	"mikro-orm": {
+		"useTsNode": true,
+		"tsConfigPath": "./tsconfig.mikro-orm.json",
+		"configPaths": [
+			"./src/mikro-orm.config.ts",
+			"./dist/mikro-orm.config.js"
+		]
 	},
 	"prettier": "@sapphire/prettier-config",
 	"packageManager": "yarn@3.2.4"
