--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -1,13 +1,15 @@
 {
+	"extends": "../tsconfig.base.json",
 	"compilerOptions": {
-		"target": "ES2022",
-		"module": "ES2022",
+		"rootDir": "./",
+		"outDir": "../dist",
+		"composite": true,
+		"preserveConstEnums": true,
+		"declaration": true,
 		"moduleResolution": "node",
 		"experimentalDecorators": true,
 		"emitDecoratorMetadata": true,
 		"esModuleInterop": true
 	},
-	// "extends": "tsconfig/base.json",
-	"include": ["**/*.ts"],
-	"exclude": ["node_modules"]
+	"include": ["."]
 }
