feat: mysql dev server docker commands

--- a/package.json
+++ b/package.json
@@ -23,7 +23,13 @@
 		"postinstall": "husky install .github/husky",
 		"prepack": "yarn build && pinst --disable",
 		"postpack": "pinst --enable",
-		"upgrade": "yarn upgrade"
+		"upgrade": "yarn upgrade",
+		"docker:mysql:dev:create": "docker run --name mysql-hivetown -p 3306:3306 -v mysql-data:/var/lib/mysql -e MYSQL_ROOT_PASSWORD=hello -d mysql:latest",
+		"docker:mysql:dev:start": "docker start mysql-hivetown",
+		"docker:mysql:dev:stop": "docker stop mysql-hivetown",
+		"docker:mysql:dev:rm": "docker rm mysql-hivetown",
+		"docker:mysql:dev:logs": "docker logs mysql-hivetown",
+		"docker:mysql:dev:shell": "docker exec -it mysql-hivetown mysql -u root -p"
 	},
 	"dependencies": {
 		"@decorators/di": "^2.0.0",
