--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 	"devDependencies": {
 		"@commitlint/cli": "^17.1.2",
 		"@commitlint/config-conventional": "^17.1.0",
+		"@faker-js/faker": "^7.6.0",
 		"@mikro-orm/cli": "^5.5.0",
 		"@sapphire/eslint-config": "^4.3.8",
 		"@sapphire/prettier-config": "^1.4.4",
