--- a/package.json
+++ b/package.json
@@ -23,15 +23,16 @@
 		"postinstall": "husky install .github/husky",
 		"prepack": "yarn build && pinst --disable",
 		"postpack": "pinst --enable",
-		"upgrade": "yarn upgrade"
+		"upgrade": "yarn upgrade",
+		"faker": "ts-node -r tsconfig-paths/register ./src/faker"
 	},
 	"dependencies": {
 		"@decorators/di": "^2.0.0",
 		"@decorators/express": "^2.9.1",
-		"@mikro-orm/core": "^5.6.11",
-		"@mikro-orm/migrations": "^5.6.11",
-		"@mikro-orm/mysql": "^5.6.11",
-		"@mikro-orm/reflection": "^5.5.0",
+		"@mikro-orm/core": "5.6.13",
+		"@mikro-orm/migrations": "5.6.13",
+		"@mikro-orm/mysql": "5.6.13",
+		"@mikro-orm/reflection": "5.6.13",
 		"cors": "^2.8.5",
 		"dotenv-cra": "^3.0.2",
 		"express": "^4.18.2",
@@ -41,8 +42,8 @@
 	"devDependencies": {
 		"@commitlint/cli": "^17.1.2",
 		"@commitlint/config-conventional": "^17.1.0",
-		"@faker-js/faker": "^7.6.0",
-		"@mikro-orm/cli": "^5.5.0",
+		"@mikro-orm/cli": "5.6.13",
+		"@mikro-orm/seeder": "5.6.13",
 		"@sapphire/eslint-config": "^4.3.8",
 		"@sapphire/prettier-config": "^1.4.4",
 		"@sapphire/ts-config": "^3.3.4",
@@ -65,6 +66,7 @@
 		"pretty-quick": "^3.1.3",
 		"standard-version": "^9.3.2",
 		"ts-jest": "^29.0.3",
+		"ts-node": "^10.9.1",
 		"typedoc": "^0.23.17",
 		"typedoc-plugin-mdn-links": "^2.0.0",
 		"typescript": "^4.8.4"
