--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"dotenv-cra": "^3.0.2",
 		"express": "^4.18.2",
 		"express-validation": "^4.1.0",
+		"lodash": "^4.17.21",
 		"mysql2": "^2.3.3",
 		"tslib": "^2.4.0"
 	},
@@ -51,6 +52,7 @@
 		"@types/cors": "^2",
 		"@types/express": "^4",
 		"@types/jest": "^29.2.0",
+		"@types/lodash": "^4",
 		"@types/node": "^18.14.1",
 		"@typescript-eslint/eslint-plugin": "^5.40.1",
 		"@typescript-eslint/parser": "^5.40.1",
