--- a/package.json
+++ b/package.json
@@ -33,10 +33,12 @@
 		"@mikro-orm/migrations": "5.6.13",
 		"@mikro-orm/mysql": "5.6.13",
 		"@mikro-orm/reflection": "5.6.13",
+		"cookie-parser": "^1.4.6",
 		"cors": "^2.8.5",
 		"dotenv-cra": "^3.0.2",
 		"express": "^4.18.2",
 		"express-validation": "^4.1.0",
+		"firebase-admin": "^11.5.0",
 		"lodash": "^4.17.21",
 		"mysql2": "^2.3.3",
 		"tslib": "^2.4.0"
@@ -49,6 +51,7 @@
 		"@sapphire/eslint-config": "^4.3.8",
 		"@sapphire/prettier-config": "^1.4.4",
 		"@sapphire/ts-config": "^3.3.4",
+		"@types/cookie-parser": "^1",
 		"@types/cors": "^2",
 		"@types/express": "^4",
 		"@types/jest": "^29.2.0",
