--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -11,5 +11,5 @@
 		"emitDecoratorMetadata": true,
 		"esModuleInterop": true
 	},
-	"include": ["."]
+	"include": [".", "firebase-serviceAccount.json"]
 }
