--- a/package.json
+++ b/package.json
@@ -29,10 +29,11 @@
 	"dependencies": {
 		"@decorators/di": "^2.0.0",
 		"@decorators/express": "^2.9.1",
-		"@mikro-orm/core": "5.6.13",
-		"@mikro-orm/migrations": "5.6.13",
-		"@mikro-orm/mysql": "5.6.13",
-		"@mikro-orm/reflection": "5.6.13",
+		"@mikro-orm/core": "5.6.15",
+		"@mikro-orm/knex": "5.6.15",
+		"@mikro-orm/migrations": "5.6.15",
+		"@mikro-orm/mysql": "5.6.15",
+		"@mikro-orm/reflection": "5.6.15",
 		"cookie-parser": "^1.4.6",
 		"cors": "^2.8.5",
 		"dotenv-cra": "^3.0.2",
@@ -46,8 +47,8 @@
 	"devDependencies": {
 		"@commitlint/cli": "^17.1.2",
 		"@commitlint/config-conventional": "^17.1.0",
-		"@mikro-orm/cli": "5.6.13",
-		"@mikro-orm/seeder": "5.6.13",
+		"@mikro-orm/cli": "5.6.15",
+		"@mikro-orm/seeder": "5.6.15",
 		"@sapphire/eslint-config": "^4.3.8",
 		"@sapphire/prettier-config": "^1.4.4",
 		"@sapphire/ts-config": "^3.3.4",
