--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"firebase-admin": "^11.5.0",
 		"lodash": "^4.17.21",
 		"mysql2": "^2.3.3",
+		"stripe": "^12.0.0",
 		"tslib": "^2.4.0"
 	},
 	"devDependencies": {
