feat: build directly to prod image

--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
 		"prepack": "yarn build && pinst --disable",
 		"postpack": "pinst --enable",
 		"upgrade": "yarn upgrade",
-		"docker:build": "docker build --no-cache -t hivetown-api .",
-		"docker:run": "docker run -p 3000:3000 hivetown-api",
-		"docker:push": "docker tag hivetown-api luckspt/hivetown-api; docker push luckspt/hivetown-api"
+		"docker:build": "docker build --no-cache -t luckspt/hivetown-api .",
+		"docker:run": "docker run -p 3000:3000 luckspt/hivetown-api",
+		"docker:push": "docker push luckspt/hivetown-api"
 	},
 	"dependencies": {
 		"@decorators/di": "^2.0.0",
