--- a/package.json
+++ b/package.json
@@ -18,8 +18,6 @@
 		"watch": "tsc -b src -w",
 		"dev": "nodemon",
 		"sversion": "standard-version",
-		"commit": "git-cz",
-		"cz": "git-cz",
 		"postinstall": "husky install .github/husky",
 		"prepack": "yarn build && pinst --disable",
 		"postpack": "pinst --enable",
@@ -56,6 +54,11 @@
 		"@sapphire/eslint-config": "^4.3.8",
 		"@sapphire/prettier-config": "^1.4.4",
 		"@sapphire/ts-config": "^3.3.4",
+		"@semantic-release/changelog": "^6.0.3",
+		"@semantic-release/commit-analyzer": "^9.0.2",
+		"@semantic-release/git": "^10.0.1",
+		"@semantic-release/npm": "^10.0.3",
+		"@semantic-release/release-notes-generator": "^10.0.3",
 		"@types/cookie-parser": "^1",
 		"@types/cors": "^2",
 		"@types/express": "^4",
@@ -64,7 +67,6 @@
 		"@types/node": "^18.14.1",
 		"@typescript-eslint/eslint-plugin": "^5.40.1",
 		"@typescript-eslint/parser": "^5.40.1",
-		"cz-conventional-changelog": "^3.3.0",
 		"eslint": "^8.26.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-prettier": "^4.2.1",
@@ -75,6 +77,7 @@
 		"pinst": "^3.0.0",
 		"prettier": "^2.7.1",
 		"pretty-quick": "^3.1.3",
+		"semantic-release": "^21.0.1",
 		"standard-version": "^9.3.2",
 		"ts-jest": "^29.0.3",
 		"ts-node": "^10.9.1",
@@ -106,11 +109,6 @@
 	"lint-staged": {
 		"*.{mjs,js,ts}": "eslint --fix --ext mjs,js,ts"
 	},
-	"config": {
-		"commitizen": {
-			"path": "./node_modules/cz-conventional-changelog"
-		}
-	},
 	"publishConfig": {
 		"access": "public"
 	},
@@ -125,6 +123,21 @@
 			"./src/mikro-orm.config.ts",
 			"./dist/mikro-orm.config.js"
 		]
+	},
+	"release": {
+		"plugins": [
+			"@semantic-release/commit-analyzer",
+			"@semantic-release/release-notes-generator",
+			[
+				"@semantic-release/npm",
+				{
+					"npmPublish": false
+				}
+			],
+			"@semantic-release/changelog",
+			"@semantic-release/git"
+		],
+		"branch": "master"
 	},
 	"prettier": "@sapphire/prettier-config",
 	"packageManager": "yarn@3.2.4"
