--- a/package.json
+++ b/package.json
@@ -137,7 +137,7 @@
 			"@semantic-release/changelog",
 			"@semantic-release/git"
 		],
-		"branch": "master"
+		"branch": "main"
 	},
 	"prettier": "@sapphire/prettier-config",
 	"packageManager": "yarn@3.2.4"
