--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 		"lodash": "^4.17.21",
 		"mikro-orm-soft-delete": "^0.1.0",
 		"mysql2": "^2.3.3",
+		"nodemailer": "^6.9.2",
 		"stripe": "^12.0.0",
 		"tslib": "^2.4.0"
 	},
@@ -62,6 +63,7 @@
 		"@types/jest": "^29.2.0",
 		"@types/lodash": "^4",
 		"@types/node": "^18.14.1",
+		"@types/nodemailer": "^6",
 		"@typescript-eslint/eslint-plugin": "^5.40.1",
 		"@typescript-eslint/parser": "^5.40.1",
 		"cz-conventional-changelog": "^3.3.0",
