--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"@mikro-orm/reflection": "5.6.15",
 		"cookie-parser": "^1.4.6",
 		"cors": "^2.8.5",
+		"countries-and-timezones": "^3.4.1",
 		"dotenv-cra": "^3.0.2",
 		"express": "^4.18.2",
 		"express-validation": "^4.1.0",
