fix: input device is not a TTY

--- a/.github/workflows/continuous-delivery.yml
+++ b/.github/workflows/continuous-delivery.yml
@@ -24,7 +24,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Test the Docker image
-        run: docker run --rm -it ${{ env.IMAGE_NAME }}
+        run: docker run --rm ${{ env.IMAGE_NAME }}
   push_to_registry:
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
