--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -2,6 +2,9 @@ on:
   push:
     branches:
       - main
+  # TODO remove, this is for testing only!!!
+  pull_request:
+
 name: release-please
 jobs:
   release-please:
