--- a/.github/workflows/continuous-delivery.yml
+++ b/.github/workflows/continuous-delivery.yml
@@ -1,10 +1,15 @@
 name: Build and Push Docker Image to Docker Hub
 
 on:
+  workflow_dispatch:
   push:
-    branches: ['main']
+    branches:
+      - 'main'
+    tags:
+      - 'v*'
   pull_request:
-    branches: ['main']
+    branches:
+      - 'main'
 
 env:
   # Use docker.io for Docker Hub if empty
@@ -29,11 +34,16 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Extract metadata (tags, labels) for Docker
+      - name: Docker meta
         id: meta
         uses: docker/metadata-action@v4
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          tags: |
+            type=ref,event=branch
+            type=ref,event=pr
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v4
