--- a/.github/workflows/continuous-delivery.yml
+++ b/.github/workflows/continuous-delivery.yml
@@ -2,6 +2,8 @@ name: Build and Push Docker Image to Docker Hub
 
 on:
   workflow_dispatch:
+  release:
+    types: [created]
   push:
     branches:
       - 'main'
@@ -40,10 +42,10 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
+            type=semver,pattern={{raw}}
+            type=semver,pattern=v{{major}}
             type=ref,event=branch
             type=ref,event=pr
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v4
